# LLM_course_homeworks

./: .gitignore
project/tutor_bot/: .env  .env.example  README.md  pyproject.toml
project/tutor_bot/.streamlit/: config.toml
project/tutor_bot/data/: llm_preferences.json
project/tutor_bot/data/evaluation/: corpus_manifest.json  goldens.json  llm_contract_cases.json
project/tutor_bot/data/metadata/: LLM_course_metadata.json  LLM_course_metadata_archive.json  databases.json  notes_metadata.json  unity_metadata.json  unity_metadata_archive.json
project/tutor_bot/data/ui_state/: LLM_course.json  ui_state.json  unity.json
project/tutor_bot/docs/: evaluation_criteria.md  langfuse.md  multi_agent_chat_plan.md  vllm.md
project/tutor_bot/src/tutor_bot/: check_consistency.py  config.py  evaluate_llm_contracts.py  evaluate_retrieval.py  rebuild_index.py  synchronize_metadata.py
project/tutor_bot/src/tutor_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project/tutor_bot/tests/application/: test_active_recall_custom_questions.py  test_active_recall_service.py  test_chat_capabilities.py  test_chat_local_fallback.py  test_chat_service.py  test_chat_source_query.py  test_note_fullness.py  test_speech_to_text_service.py  test_vacancy_models.py
project/tutor_bot/tests/evaluation/: test_corpus_loader.py  test_golden_loader.py
project/tutor_bot/tests/generation/: test_llm_note_content_generator.py  test_llm_note_metadata_suggester.py  test_llm_providers.py  test_observed_llm_provider.py  test_ollama_note_metadata_suggester.py  test_vllm_provider.py
(+361 files in other folders)
