[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bm25s>=0.3,<0.4",
    "chromadb>=1.1.13,<2",
    "openai>=1.60,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sentence-transformers>=5.6,<6",
    "streamlit>=1.40,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
