[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bm25s>=0.3,<0.4",
    "chromadb>=1.1.13,<2",
    "faster-whisper>=1.2,<2",
    "langfuse>=4,<5",
    "langchain>=1,<2",
    "langgraph>=1,<2",
    "ollama>=0.6,<1",
    "openai>=1.60,<3",
    "pypdf>=5,<6",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "sentence-transformers>=5.6,<6",
    "streamlit>=1.40,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tutor_bot = ["ui/components/**/*.html"]

[tool.ruff]
target-version = "py312"
line-length = 100
